// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PoliticianDetail /> Details renders gender Female 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className="col-lg-12"
    >
      <div
        className="politician-name"
      >
        undefined (Metal)
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-3"
    >
      <img
        className="politician-picture"
        src="https://rock.com/me.png"
      />
    </div>
    <div
      className="col-lg-5"
    >
      <div
        className="details"
      >
        <p>
          Sexo: 
          Feminino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
    </div>
    <div
      className="col-lg-4"
    >
      <div
        className="panel panel-info candidacies"
      >
        <div
          className="panel-heading"
        >
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
        </div>
        <div
          className="panel-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without alternative names 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className="col-lg-12"
    >
      <div
        className="politician-name"
      >
        Metal
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-3"
    >
      <img
        className="politician-picture"
        src="https://rock.com/me.png"
      />
    </div>
    <div
      className="col-lg-5"
    >
      <div
        className="details"
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
    </div>
    <div
      className="col-lg-4"
    >
      <div
        className="panel panel-info candidacies"
      >
        <div
          className="panel-heading"
        >
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
        </div>
        <div
          className="panel-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without ethnicity 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className="col-lg-12"
    >
      <div
        className="politician-name"
      >
        undefined (Metal)
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-3"
    >
      <img
        className="politician-picture"
        src="https://rock.com/me.png"
      />
    </div>
    <div
      className="col-lg-5"
    >
      <div
        className="details"
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
    </div>
    <div
      className="col-lg-4"
    >
      <div
        className="panel panel-info candidacies"
      >
        <div
          className="panel-heading"
        >
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
        </div>
        <div
          className="panel-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PoliticianDetail /> Details renders politician name without state 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className="col-lg-12"
    >
      <div
        className="politician-name"
      >
        undefined (Metal)
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-3"
    >
      <img
        className="politician-picture"
        src="https://rock.com/me.png"
      />
    </div>
    <div
      className="col-lg-5"
    >
      <div
        className="details"
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
    </div>
    <div
      className="col-lg-4"
    >
      <div
        className="panel panel-info candidacies"
      >
        <div
          className="panel-heading"
        >
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
        </div>
        <div
          className="panel-body"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PoliticianDetail /> renders <Loading /> when there is no data 1`] = `
<div>
  Loading...
</div>
`;

exports[`<PoliticianDetail /> renders without crashing 1`] = `
<div
  className=""
>
  <div
    className="row"
  >
    <div
      className="col-lg-12"
    >
      <div
        className="politician-name"
      >
        undefined (Metal)
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-lg-3"
    >
      <img
        className="politician-picture"
        src="https://rock.com/me.png"
      />
    </div>
    <div
      className="col-lg-5"
    >
      <div
        className="details"
      >
        <p>
          Sexo: 
          Masculino
        </p>
        <p>
          Partido: 
          rock
        </p>
        <p>
          Estado civil: 
          single
        </p>
        <p>
          Ocupação: 
          Developer
        </p>
        <p>
          Escolaridade: 
          rock
        </p>
        <p>
          Data de nascimento: 
          1800-01-01
        </p>
        <p>
          Nacionalidade: 
          rock
        </p>
        <p>
          Naturalidade: 
          heavy metal/rock
        </p>
        <p>
          Nomes Alternativos: 
        </p>
        <p>
          Cor/Raça: 
          rock
        </p>
        <p>
          Email: 
          rock@rock.com
        </p>
        <p>
          Website: 
          https://rock.com
        </p>
      </div>
    </div>
    <div
      className="col-lg-4"
    >
      <div
        className="panel panel-info candidacies"
      >
        <div
          className="panel-heading"
        >
          <h3
            className="panel-title"
          >
            Candidaturas
          </h3>
        </div>
        <div
          className="panel-body"
        />
      </div>
    </div>
  </div>
</div>
`;
